--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="heading">Create an Account</string>
     <string name="description">By contributing you accept our Privacy Policy and Term of Use </string>
     <string name="last_text">Already have an account? Login</string>
+    <string name="termscondition_header">Term of Use</string>
+
 </resources>
