feat: create clickable login text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="last_text">Already have an account? Login</string>
     <string name="termscondition_header">Term of Use</string>
     <string name="register">Register</string>
+    <string name="goToLogin">Already have an Account? Login</string>
 
 </resources>
